static/css/gigo.css
/* Sticky footer styles
-------------------------------------------------- */

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
  font-family: 'Nunito', sans-serif;
  font-size: 1rem;
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by its height */
  margin: 0 auto -40px;
  /* Pad bottom by footer height */
  padding: 0 0 60px;
}

/* Set the fixed height of the footer here */
#footer {
  height: 40px;
  background-color: #f5f5f5;
}

/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

#wrap > .container {
  padding: 20px 15px 0;
}

.container .credit {
  margin: 10px 0;
}

#footer > .container {
  padding-left: 15px;
  padding-right: 15px;
}

code {
  font-size: 80%;
}

.plan-comment-input {
    margin-bottom: 0px;
}

.table tbody > tr > td.plan-cell {
    vertical-align: middle;
}

.icon-display {
    pointer-events: none;
    cursor: not-allowed;
}

.empty-comment {
    color: black;
}

.landingwrap {
/*     background-image:url('/images/bone.png'); */
}

#landingpage_content {
    padding: 20px;
    border: 1px solid;
    border-color: black;
    background-color: white;
    opacity: .95;
}

@media screen and (min-width: 992px) { /* bootstrap breakpoint */
    #landingpage_content {
        margin-top: 200px;
    }
}

#landingpage_bigcontent {
    margin-top: 100px;
    padding: 20px;
    border: 1px solid;
    border-color: black;
    background-color: white;
    opacity: .95;
}


.icon::before {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.lang-input{
    appearance: none;
    background: transparent;
    border: none;
}

/* Custom page CSS
-------------------------------------------------- */

a {
    color: #428bca;
}

.navbar {
  padding-top: 0px;
  padding-bottom: 0px;
  background-color: #008000;
}

.navbar.dev {
  background-color: #800000;
}

.navbar a.dropdown-item {
  color: #000;
}

.dropdown-menu {
  margin-top: 0px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
  z-index:9999;
}

.dropdown-menu .lang-input {
  /* Needed for Safari on iOS 17 */
  color: #09121c;
}

.h5, h5 {
    font-size: 1.2rem;
}

.h3, h3 {
    font-size: 1.1rem;
}

.page-header {
    font-size: 150%;
    border-bottom: none;
}

.gomlabel {
    font-weight:bold;
}

.page-header small {
    font-size: 16px;
}

.comment-intro {
    font-style:italic;
}

.comment-comment {
}

.panel-group .panel-overflowable {
    overflow:visible;
}

.validation-error {
    margin-bottom: 20px;
}

.validation-error .fa-exclamation-triangle {
    color: firebrick;
}

/*
 FullCalendar customizations
 ----------------------------- */
.fc-event {
	border: 0;
}

.fc-h-event .fc-event-main-frame {
  padding: 0 5px;
}

.fc-daygrid-block-event:hover {
  background-color: #ccc !important;
}

.card-header {
  padding-top: .2rem;
  padding-bottom: .2rem;
}

.card-header h5 {
  margin-bottom: 0px;
}

.card-header .titlerow {
  margin-top:auto;
  margin-bottom:auto;
}

.btn-group-sm>.btn, .btn-sm {
    padding: .0rem .5rem;
}

.btn-primary {
    color: #fff;
    background-color: #428bca;
    border-color: #007bff;
}

.card-header[data-toggle="collapse"] {
    cursor: pointer;
}
.card-header[data-toggle="collapse"]:after {
    /* font-family: 'Font Awesome 5 Pro'; */
    /* font-weight: 900; */
    font: var(--fa-font-solid);
    font-size: .75em;
    content: "\f068";
    padding-top: .4em;
    padding-right: .1em;
    float: left;
}
.card-header[data-toggle="collapse"].collapsed:after {
    /* symbol for "collapsed" panels */
    content: "\f067";
}


.d-event[class*="fa-"]::before {
    background-color: transparent;
    font-family: 'Font Awesome 5 Pro';
    font-weight: 900;
    font-size: smaller;
    content: '\f001';
}

/* HTMX indicators
-------------------------------------------------- */
.htmx-indicator {
    display: none;
}

.htmx-request.htmx-indicator, .htmx-request .htmx-indicator {
    display: inline-block;
}

.htmx-request.htmx-indicator-replace, .htmx-request .htmx-indicator-replace {
    display: none;
}
=======
ul.errorlist {
  color: #ff0000
}

/* gig grid
-------------------------------------------------- */
.gig-grid-title {
  border-right: 1px solid;
  border-color:#999;
  padding-right: 10px;
  text-align: center;
}

.gig-grid-member-cell {
  padding-left:20px;
}

.gig-grid-plan {
  border-right: 1px solid;
  border-color:#999;
  text-align: center;
}

/* x-editable interface
-------------------------------------------------- */
.editable-input input[type="text"], .editable-input textarea {
    width: 100%;
}

.editable-container.editable-inline {
    width: 100%
}

/* member profile page
-------------------------------------------------- */
.assoc-band-row {
  padding-top: 5px;
  padding-bottom: 5px;
  scroll-margin-top: 40px;
}

/* agenda pages
-------------------------------------------------- */
.hidden-bands-list {
  font-style: italic;
}
.calendar-preferences-info {
  font-style: italic;
}

